# x-view

./: .gitignore  README.md  dependencies.rosinstall
dataset_tools/airsim_image_conversion/: CMakeLists.txt  package.xml
dataset_tools/airsim_image_conversion/src/: airsim_image_converter.cpp
dataset_tools/airsim_to_rosbag/: CMakeLists.txt  README.md  package.xml
dataset_tools/airsim_to_rosbag/launch/: airsim_with_depth_cloud.launch
dataset_tools/airsim_to_rosbag/src/: airsim_common.cpp  airsim_live_node.cpp  airsim_parser.cpp  airsim_ros_conversions.cpp  airsim_rosbag_converter.cpp
dataset_tools/streetview_to_rosbag/: CMakeLists.txt  README.md  package.xml
dataset_tools/streetview_to_rosbag/src/: streetview_common.cpp  streetview_depth_map_to_depth_images.cpp  streetview_live_node.cpp  streetview_parser.cpp  streetview_ros_conversions.cpp  streetview_rosbag_converter.cpp
g2o-examples/: CMakeLists.txt  README.md
g2o-examples/src/: CMakeLists.txt
g2o-examples/src/simple/: CMakeLists.txt  circle-2D.cpp  square-2D.cpp
g2o-examples/src/simulation/: CMakeLists.txt  Simulator.cpp  Simulator.hpp  main.cpp
gtsam-examples/: CMakeLists.txt  README.md
gtsam-examples/src/: CMakeLists.txt  Simulator.cpp  Simulator.hpp  handMade.cpp  main.cpp
opencvblobs_catkin/: CMakeLists.txt
x-view_core/: CMakeLists.txt  package.xml
x-view_core/include/x-view_core/: bos.h  semantic_factory.h  semantic_graph.h  semantic_landmark_factory.h  types.h  x-view.h  x-view_semantics.h  x-view_types.h
x-view_core/include/x-view_core/landmarks/: bos.h  graph.h  (+1 more)
x-view_core/src/: bos.cc  semantic_factory.cc  semantic_graph.cc  semantic_landmark_factory.cc  x-view.cc  x-view_semantics.cc
x-view_core/src/landmarks/: abstract_semantic_landmark.cc  bos.cc  graph.cc
x-view_ros/x-view_node/: CMakeLists.txt  package.xml
x-view_ros/x-view_node/src/: x-view_node.cc  x-view_worker.cc
x_view_core/: .gitignore  CMakeLists.txt  README.md  chain.dot  dependencies.rosinstall  mainpage.dox  package.xml
x_view_core/include/x_view_core/: abstract_semantic_landmark.h  bos.h  bos_trainer.h  graph.h  orb_visual_feature.h  semantic_landmark_factory.h  sift_visual_feature.h  visual_feature.h  x_view.h  x_view.h.orig  x_view_locator.h  x_view_tools.h  x_view_types.h
x_view_core/output/: chain_base.dot  g1.dot  g2.dot  merged.dot  random_base.dot  random_sub.dot
x_view_core/src/: abstract_semantic_landmark.cc  bos.cc  bos_trainer.cc  graph.cc  orb_visual_feature.cc  semantic_landmark_factory.cc  sift_visual_feature.cc  surf_visual_feature.cc  visual_feature.cc  x_view.cc  x_view.cc.orig  x_view_locator.cc  x_view_tools.cc
x_view_core/src/datasets/: abstract_dataset.cc  airsim_dataset.cc  streetview_dataset.cc  synthia_dataset.cc
x_view_core/src/features/: abstract_descriptor.cc  abstract_feature.cc  graph.cc  graph.cc.orig  graph_descriptor.cc  vector_descriptor.cc  vector_feature.cc  visual_descriptor.cc  visual_feature.cc
x_view_core/src/landmarks/: abstract_semantic_landmark.cc  graph_landmark.cc  histogram_landmark.cc  orb_visual_feature.cc  semantic_landmark_factory.cc  sift_visual_feature.cc  surf_visual_feature.cc  visual_descriptor_landmark.cc  visual_feature.cc  visual_feature_landmark.cc
x_view_core/src/matchers/: graph_matcher.cc  vector_features_matcher.cc  vector_matcher.cc  visual_features_matcher.cc
x_view_core/src/parameters/: parameters.cc
x_view_core/src/timer/: null_timer.cc  timer.cc  timer_printer.cc
x_view_core/test/: random_graph_accuracy_study.cc  test_argsort.cc  test_argsort.h  test_argsort_main.cc  test_camera_projection.cc  test_camera_projection.h  test_camera_projection_main.cc  test_common.cc  test_common.h  test_empty.cc  test_graph.cc  test_graph_duplicate_removal.cc  test_graph_landmark.cc  test_graph_landmark.h  test_graph_landmark_impl.cc  test_graph_landmark_impl.h  test_graph_landmark_main.cc  test_graph_landmark_matcher.cc  test_graph_landmark_matcher.h  test_graph_landmark_matcher_main.cc  test_graph_matching.cc  test_graph_matching_impl.cc  test_graph_matching_impl.h  test_graph_matching_main.cc  test_graph_merger.cc  test_graph_merger_main.cc  test_histogram_landmark.cc  test_histogram_landmark.h  test_histogram_landmark_main.cc  test_localization.cc  test_localization.h  test_localization_main.cc  test_main.cc  test_mcgregor_matching.cc  test_mcgregor_matching.h  test_mcgregor_matching_main.cc  test_neighbor_search.cc  test_neighbor_search.h  test_neighbor_search_main.cc  test_param_tree.cc  (+13 more)
x_view_evaluation/: CMakeLists.txt  README.md  package.xml
x_view_evaluation/include/x_view_evaluation/: directory.h  path.h  statistics.h  x_view_evaluation.h
x_view_evaluation/src/: directory.cc  path.cc  statistics.cc  x_view_evaluation.cc
x_view_ros/x_view_bag_reader/: CMakeLists.txt  README.md  package.xml
x_view_ros/x_view_bag_reader/cfg/: x_view_bag_reader.yaml
x_view_ros/x_view_bag_reader/launch/: x_view_bag_node.launch
x_view_ros/x_view_bag_reader/src/: x_view_bag_node.cc  x_view_bag_node.cc.orig  x_view_bag_reader.cc  x_view_pause.cc  x_view_topic_view.cc
x_view_ros/x_view_graph_publisher/: CMakeLists.txt  README.md  package.xml
x_view_ros/x_view_graph_publisher/src/: graph_publisher.cc
x_view_ros/x_view_node/: CMakeLists.txt  README.md  package.xml
x_view_ros/x_view_node/cfg/: x_view_basic.yaml  x_view_example_parameters.yaml
x_view_ros/x_view_node/launch/: x_view_node.launch  x_view_simulator.launch
x_view_ros/x_view_node/src/: x_view_node.cc  x_view_parameter_handler.cc  x_view_worker.cc
x_view_ros/x_view_parser/: CMakeLists.txt  README.md  package.xml
x_view_ros/x_view_parser/src/: parser.cc
x_view_ros_os/x_view_bag_reader/: CMakeLists.txt  package.xml
x_view_ros_os/x_view_bag_reader/cfg/: x_view_bag_reader.yaml
x_view_ros_os/x_view_bag_reader/launch/: x_view_bag_node_2.launch
x_view_ros_os/x_view_bag_reader/src/: x_view_bag_node.cc  x_view_bag_reader.cc  x_view_topic_view.cc
x_view_ros_os/x_view_graph_publisher/: CMakeLists.txt  package.xml
x_view_ros_os/x_view_graph_publisher/src/: graph_publisher.cc
(+547 files in other folders)
