<?xml version="1.0"?>
<package format="2">
  <name>x_view_evaluation</name>
  <version>0.0.1</version>
  <description>x_view_evaluation</description>

  <maintainer email="deldonc@student.ethz.ch">Carlo Del Don</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>glog_catkin</depend>
  <depend>x_view_core</depend>

</package>

