<?xml version="1.0"?>
<package format="2">
  <name>airsim_image_conversion</name>
  <version>0.0.0</version>
  <description>A tool for processing output images from airsim into suitable format.</description>

  <author email="gawela@ethz.ch">Abel Gawel</author>
  <author email="deldonc@student.ethz.ch">Carlo Del Don</author>

  <maintainer email="gawela@ethz.ch">Abel Gawel</maintainer>
  <maintainer email="deldonc@student.ethz.ch">Carlo Del Don</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>doxygen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>opencv2_catkin</depend>
</package>
