<?xml version="1.0"?>
<package format="2">
  <name>x_view_graph_publisher_os</name>
  <version>0.0.1</version>
  <description>x_view_graph_publisher publishes the 3D coordinates
  of vertices and edges belonging to a graph.</description>

  <maintainer email="deldonc@student.ethz.ch">Carlo Del Don</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>glog_catkin</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>x_view_core_os</depend>
  
</package>

